--- a/.gitignore
+++ b/.gitignore
@@ -7,22 +7,26 @@
 backend/node_modules
 backend/.pnp
 backend/.pnp.js
+frontend/node_modules
 
 # testing
 /coverage
 
 # production
+frontend/build
 /build
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+frontend/.DS_Store
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
+
 backend/.env
 notes.md
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
